# clang_tidy_examples

ament_cmake/: CMakeLists.txt  build_command.txt  main.cpp  my-clang-tidy-config.yaml  package.xml
ament_cmake_what_if/: CMakeLists.txt
pure_cmake/: CMakeLists.txt
pure_cmake_all_targets/: CMakeLists.txt
pure_cmake_command_line/: CMakeLists.txt  build_command.txt
pure_cmake_config_file/: CMakeLists.txt
pure_cmake_config_file/subfolder/: .clang-tidy  second_source.cpp
